2017-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-verbose, w3m-message-silent, w3m-message): Doc fix.

	* w3m-cookie.el (w3m-about-cookie):
	Add GUIs that support limiting and deleting ([emacs-w3m:12790]).
	* w3m-form.el (w3m-form-make-form-data):
	Don't encode SPC in a search word used for w3m-cookie.

2017-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Parse a form in its page buffer.

2017-08-11  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-italic):
	* w3m-lnum.el (w3m-lnum-minibuffer-prompt, w3m-lnum-match):
	* w3m-session.el (w3m-session-select, w3m-session-selected):
	Update "face spec" DISPLAY form "type" to be `nil' for character-only
	terminals.  [emacs-w3m:12788]

2017-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Do onload redirection.
	[emacs-w3m:12787]

2017-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-arrived-shutdown):
	* w3m-cookie.el (w3m-cookie-shutdown): Don't error out.

2017-08-08  Akinori MUSHA  <knu@iDaemons.org>

	* w3m.el: Don't add autoload functions to hooks (see below).
	[emacs-w3m:12784]

	* w3m-cookie.el: Add w3m-cookie-shutdown to kill-emacs-hook here.

	* w3m-sesseion.el: Add w3m-session-crash-recovery-remove and
	w3m-session-automatic-save to w3m-arrived-shutdown-functions here.

2017-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-scroll-up, w3m-scroll-down): Make argument default to 1
	if and only if called interactively so that w3m-scroll-up-or-next-url
	and w3m-scroll-down-or-previous-url work as before.  [emacs-w3m:12783]

2017-08-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-cookie.el (w3m-cookie-1-acceptable-p):
	Use url-domsuf-cookie-allowed-p if available to check if a domain is
	unique to allow having cookies set.  [emacs-w3m:12782]

2017-08-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-scroll-up, w3m-scroll-down): Remove restriction of using
	prefix-argument, remove code that fixes bug in emacs v21.